# gui-application

./: .qmlls.ini  CMakeLists.txt  Main.qml  countermanager.cpp  countermanager.h  counterpresenter.cpp  counterpresenter.h  hostbridge.cpp  hostbridge.h  main.cpp
subapp-a/: main.cpp
subapp-b/: main.cpp
